--- a/local/templates/.default/_standart/examples/headers/header-3.html
+++ b/local/templates/.default/_standart/examples/headers/header-3.html
@@ -81,8 +81,8 @@
 										<ul class="menu_level_1 break-word list-reset">
 											<li class="item_1 has-submenu-2"><a href="#"><span>Каталог</span><span class="icon"></span></a>
 												<div class="submenu-4">
-													<div class="row">
-														<div class="col-lg-4 col-12">
+													<div class="submenu-4__row row">
+														<div class="submenu-4__col submenu-4__col--left">
 															<div class="level_2">
 																<div class="item_2" data-submenu="submenu-4-1"><a href="#">Волосы</a></div>
 																<div class="item_2" data-submenu="submenu-4-2"><a href="#">Брови и ресницы</a></div>
@@ -93,9 +93,9 @@
 																<div class="item_2"><a href="#">Прочие</a></div>
 															</div>
 														</div>
-														<div class="col-lg-8 col-12">
+														<div class="submenu-4__col submenu-4__col--right">
 															<div class="submenu_inner_items">
-																<div class="submenu_inner_item">
+																<div class="submenu_inner_item" id="submenu-4-1">
 																	<div class="row">
 																		<div class="col-lg-4 col-12">
 																			<div class="level_3">
@@ -124,57 +124,58 @@
 																		</div>
 																		<div class="col-lg-4 col-12">
 																			<div class="level_3">
-																				<div class="item_3"><a href="#">Обработка</a>
+																				<div class="item_3"><a href="#">Базы, топы, гели</a>
 																					<div class="level_4">
-																						<div class="item_4"><a href="#">Ножницы для маникюра</a></div>
-																						<div class="item_4"><a href="#">Кусачки для маникюра</a></div>
-																						<div class="item_4"><a href="#">Кусачки для педикюра</a></div>
-																						<div class="item_4"><a href="#">Фрезы</a></div>
-																						<div class="item_4"><a href="#">Пилки и терки для стоп</a></div>
-																						<div class="item_4"><a href="#">Лопатки, шаберы</a></div>
-																						<div class="item_4"><a href="#">Пилочка и бафы</a></div>
-																						<div class="item_4"><a href="#">Сопутствующие материалы</a></div>
+																						<div class="item_4"><a href="#">Базы под гель-лак</a></div>
+																						<div class="item_4"><a href="#">Топы под гель-лак</a></div>
+																						<div class="item_4"><a href="#">Праймеры</a></div>
+																						<div class="item_4"><a href="#">Гели</a></div>
+																						<div class="item_4"><a href="#">Формы для наращивания</a></div>
+																						<div class="item_4"><a href="#">Полигель</a></div>
 																					</div>
 																				</div>
 																			</div>
 																			<div class="level_3">
-																				<div class="item_3"><a href="#">Уход</a>
+																				<div class="item_3"><a href="#">Аппараты для маникюра</a>
 																					<div class="level_4">
-																						<div class="item_4"><a href="#">Для удаления кутикулы</a></div>
-																						<div class="item_4"><a href="#">Для питания кутикулы</a></div>
-																						<div class="item_4"><a href="#">Для рук</a></div>
+																						<div class="item_4"><a href="#">Ванночки</a></div>
+																						<div class="item_4"><a href="#">Пылесосы</a></div>
+																						<div class="item_4"><a href="#">Лампы</a></div>
 																					</div>
 																				</div>
 																			</div>
 																		</div>
 																		<div class="col-lg-4 col-12">
 																			<div class="level_3">
-																				<div class="item_3"><a href="#">Обработка</a>
+																				<div class="item_3"><a href="#">Дизайн ногтей</a>
 																					<div class="level_4">
-																						<div class="item_4"><a href="#">Ножницы для маникюра</a></div>
-																						<div class="item_4"><a href="#">Кусачки для маникюра</a></div>
-																						<div class="item_4"><a href="#">Кусачки для педикюра</a></div>
-																						<div class="item_4"><a href="#">Фрезы</a></div>
-																						<div class="item_4"><a href="#">Пилки и терки для стоп</a></div>
-																						<div class="item_4"><a href="#">Лопатки, шаберы</a></div>
-																						<div class="item_4"><a href="#">Пилочка и бафы</a></div>
-																						<div class="item_4"><a href="#">Сопутствующие материалы</a></div>
+																						<div class="item_4"><a href="#">Наклейки</a></div>
+																						<div class="item_4"><a href="#">Блестки,стразы</a></div>
+																						<div class="item_4"><a href="#">Фольга, поталь, втирка</a></div>
 																					</div>
 																				</div>
 																			</div>
 																			<div class="level_3">
-																				<div class="item_3"><a href="#">Уход</a>
+																				<div class="item_3"><a href="#">Обработка инструментов</a>
 																					<div class="level_4">
-																						<div class="item_4"><a href="#">Для удаления кутикулы</a></div>
-																						<div class="item_4"><a href="#">Для питания кутикулы</a></div>
-																						<div class="item_4"><a href="#">Для рук</a></div>
+																						<div class="item_4"><a href="#">Пакеты для стрелизации</a></div>
+																						<div class="item_4"><a href="#">Контейнеры для дезинфекции</a></div>
 																					</div>
 																				</div>
+																			</div>
+																			<div class="level_3">
+																				<div class="item_3"><a href="#">Кисти для маникюра</a></div>
+																			</div>
+																			<div class="level_3">
+																				<div class="item_3"><a href="#">Наборы для маникюра</a></div>
+																			</div>
+																			<div class="level_3">
+																				<div class="item_3"><a href="#">Очищение и снятие</a></div>
 																			</div>
 																		</div>
 																	</div>
 																</div>
-																<div class="submenu_inner_item">
+																<div class="submenu_inner_item" id="submenu-4-2">
 																	<div class="row">
 																		<div class="col-lg-4 col-12">
 																			<div class="level_3">
@@ -477,17 +478,18 @@
 						<h1 id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<main class="g-content" id="workarea">
 														<div class="sl-main">
+															<div class="bg" style="background-image: url(../../../img/tmp/sl-main-bg.jpg)"></div>
 															<div class="wrap cursor inited-not">
 																<div class="slider">
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет"></div>
+																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
 																				<div class="b-wrap">
-																					<div class="h1 title">№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет</div>
-																					<p class="text">№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine</p>
+																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																				<a class="btn btn-primary" href="#">подробнее</a>
 																					</div>
 																				</div>
 																			</div>
@@ -495,24 +497,27 @@
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="Лифты и лифтовое оборудование"></div>
+																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
 																				<div class="b-wrap">
-																					<div class="h1 title">Лифты и лифтовое оборудование</div>
-																					<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
+																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																					<div class="btn-wrap">
+																																				<a class="btn btn-primary" href="#">подробнее</a>
+																					</div>
 																				</div>
 																			</div>
 																		</div>
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование"></div>
+																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
 																				<div class="b-wrap">
-																					<div class="h1 title">Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование</div>
-																					<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
+																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																				<a class="btn btn-primary" href="#">подробнее</a>
 																					</div>
 																				</div>
 																			</div>
