--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -561,17 +561,24 @@
 						<h1 class="hidden" id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<main class="g-content" id="workarea">
 														<div class="sl-main">
+															<div class="bg"></div>
 															<div class="wrap cursor inited-not">
 																<div class="slider">
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="img/tmp/sl-main-0.jpg" alt="№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет</div>
-																					<p class="text">№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine</p>
-																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																					</div>
 																				</div>
 																			</div>
@@ -579,33 +586,47 @@
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="img/tmp/sl-main-0.jpg" alt="Лифты и лифтовое оборудование"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">Лифты и лифтовое оборудование</div>
-																					<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
+																					</div>
 																				</div>
 																			</div>
 																		</div>
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="img/tmp/sl-main-0.jpg" alt="Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование</div>
-																					<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
-																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																					</div>
 																				</div>
 																			</div>
 																		</div>
 																	</div>
 																</div>
-																							<div class="js-sl-pager sl-pager"></div>
 															</div>
-																						<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
+																						<div class="sl-nav-6"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
 														</div>
 														<div class="b-section b-section--advice">
 															<div class="b-section__wrap">
