--- a/local/src_v6/components/pages/index/sl-main/index.pug
+++ b/local/src_v6/components/pages/index/sl-main/index.pug
@@ -1,27 +1,27 @@
 include ../../../sliders/template/sl-main/index
 include ../../../sliders/pager/sl-pager/index
-include ../../../sliders/nav/sl-nav/index
+include ../../../sliders/nav/sl-nav-6/index
 
 +sl-main({
-  pager: 'sl-pager',
-  nav: 'sl-nav',
+  nav: 'sl-nav-6',
   slides: [
       {
-        pic: 'sl-main-0.jpg',
-        title: '№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет',
-        text: '№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine',
-        btnText: 'Подробнее о компании'
+        pic: 'sl-main-1.jpg',
+        title: 'сияйте этим летом с маслом flavia',
+        text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
+        btnText: 'подробнее'
       },
       {
-        pic: 'sl-main-0.jpg',
-        title: 'Лифты и лифтовое оборудование',
-        text: 'Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования'
+        pic: 'sl-main-1.jpg',
+        title: 'сияйте этим летом с маслом flavia',
+        text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
+        btnText: 'подробнее'
       },
       {
-        pic: 'sl-main-0.jpg',
-        title: 'Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование',
-        text: 'Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования',
-        btnText: 'Подробнее о компании'
+        pic: 'sl-main-1.jpg',
+        title: 'сияйте этим летом с маслом flavia',
+        text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
+        btnText: 'подробнее'
       }
   ]
 })
