--- a/local/src_v6/components/sliders/template/sl-main/style.scss
+++ b/local/src_v6/components/sliders/template/sl-main/style.scss
@@ -1,5 +1,33 @@
 .sl-main {
   position: relative;
+  margin-top: -91px;
+
+  @media (max-width: $screen-lg-max) {
+    margin-top: -88px;
+  }
+
+  @media (max-width: $screen-md-max) {
+    margin-top: -40px;
+  }
+
+  .bg {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 100vw;
+    height: 100%;
+    transform: translateX(-50%);
+    background-image: url(../img/tmp/sl-main-bg.jpg);
+    background-position: calc(50% - 200px) 0;
+    background-repeat: no-repeat;
+    //background-size: contain;
+    background-color: #EBE8E1;;
+
+    @media (max-width: $screen-md-max) {
+      background-position: center;
+    }
+  }
 
   .wrap {
     position: relative;
@@ -31,102 +59,197 @@
 
   .inner {
     position: relative;
-    height: 540px;
+    padding: 210px 0 60px;
 
     @media (max-width: $screen-md-max) {
-      height: 420px;
-    }
-
-    @media (max-width: $screen-sm-max) {
-      height: 340px;
+      //padding-top: 55px;
+      padding-top: 70px;
+      padding-bottom: 30px;
+      height: auto;
     }
   }
 
   .pic {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
+    padding-top: 36px;
 
-    img {
-      background-color: #D9D9D9;
+    @media (max-width: $screen-lg-max) {
+      padding-top: 0;
+    }
+
+    @media (max-width: $screen-md-max) {
+      padding-left: 60px;
+      padding-right: 60px;
+      margin-bottom: 30px;
     }
   }
 
   .img {
-    display: block;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: auto;
-    width: auto;
-    min-width: 100%;
-    min-height: 100%;
-    max-width: none;
-    transform: translate(-50%,-50%) scale(1);
+    margin-left: auto;
+    margin-right: auto;
 
     @media (max-width: $screen-md-max) {
-      min-width: inherit;
-      height: 100%;
+      max-height: 450px;
     }
 
     @media (max-width: $screen-xs-max) {
-      filter: blur(4px);
-
-      .osMac & {
-        filter: none;
-      }
+      max-height: 261px;
     }
   }
 
   .container {
     position: relative;
     display: flex;
-    align-items: center;
     height: 100%;
+    padding: 0 10px;
+    
+    @media (min-width: $screen-xl-min) {
+      padding: 0 119px;
+    }
+
+    @media (min-width: $screen-lg-min) {
+      padding: 0 50px;
+    }
+  }
+
+  .row {
+
+  }
+
+  .col-pic,
+  .col-text {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .col-pic {
+    flex: 0 0 361px;
+
+    @media (max-width: $screen-md-max) {
+      flex: 0 0 100%;
+    }
+  }
+
+  .col-text {
+    flex: 0 0 660px;
+    margin-right: 81px;
+
+    @media (max-width: $screen-lg-max) {
+      flex: 0 0 494px;
+      margin-right: 25px;
+    }
+
+    @media (max-width: $screen-md-max) {
+      flex: 0 0 100%;
+      order: 1;
+    }
   }
 
   .b-wrap {
-    max-width: 80%;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 60px 0 80px;
     color: $brand-white;
-
-    @media (max-width: $screen-md-max) {
-      padding: 50px 0 70px;
-    }
-
-    @media (max-width: $screen-sm-max) {
-      padding: 30px 0 40px;
-    }
-
-    @media (max-width: $screen-xs-max) {
-      max-width: 100%;
-    }
   }
 
   .title {
+    @include font-family-cormorant-r();
+    font-size: 60px;
+    line-height: 1.2;
     color: $brand-white;
-    margin: 0 0 20px;
-    max-height: $line-height-h1 * 2em;
+    margin: 0 0 29px;
+    max-height: 1.2 * 2em;
     overflow: hidden;
+
+    @media (max-width: $screen-lg-max) {
+      font-size: 40px;
+    }
+
+    @media (max-width: $screen-md-max) {
+      font-size: 25px;
+      margin-bottom: 14px;
+    }
   }
 
   .text {
-    max-height: $line-height-base * 4em;
+    font-size: 18px;
+    line-height: 1.63;
+    max-height: 1.63 * 4em;
     overflow: hidden;
-    margin-bottom: 15px;
+    margin-bottom: 72px;
+
+    @media (max-width: $screen-md-max) {
+      font-size: 14px;
+      margin-bottom: 21px;
+    }
   }
 
-  &.type-2 {
+  .btn {
+    display: inline-block;
+    @include font-family-regular();
+    font-size: 16px;
+    line-height: 1.25;
+    text-transform: uppercase;
+    color: $brand-white;
+    padding: 17px 20px 19px;
+    min-width: 180px;
+    background: 0 0;
+    border: 2px solid $brand-white;
+    border-radius: 50%;
 
-    .wrap {
-      width: auto;
-      transform: none;
-      left: auto;
+    @include hover-focus() {
+      background: $brand-white;
+      color: $brand-gray-10;
+    }
+  }
+
+  .sl-nav-6 {
+
+    .prev,
+    .next {
+
+      @media (max-width: $screen-md-max) {
+        top: 295px;
+      }
+
+      @media (max-width: $screen-xs-max) {
+        top: 200px;
+      }
+
+      &:before {
+        @include svg-sl-nav-6-next-white();
+      }
+    }
+
+    .prev {
+
+      @media (max-width: $screen-lg-max) {
+        left: -10px;
+      }
+
+      @media (max-width: $screen-md-max) {
+        left: 0;
+      }
+
+      &:before {
+
+      }
+    }
+
+    .next {
+
+      @media (max-width: $screen-lg-max) {
+        right: -10px;
+      }
+
+      @media (max-width: $screen-md-max) {
+        right: 0;
+      }
+
+      &:before {
+
+        @media (min-width: $screen-lg-min) {
+          @include svg-sl-nav-6-next();
+        }
+      }
     }
   }
 }
