--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -7,6 +7,7 @@ block title
   h1.hidden#title H1 Заголовок страницы. В магазинах начался сезон скидок
 block content
   include ../../components/pages/index/sl-main/index
+  include ../../components/pages/index/sl-brands/index
   include ../../components/pages/index/advice/index
   include ../../components/pages/index/sl-products/index
   //include ../../components/pages/index/card-links-3/index
