--- a/local/templates/.default/_standart/examples/headers/header-5.html
+++ b/local/templates/.default/_standart/examples/headers/header-5.html
@@ -501,18 +501,24 @@
 						<h1 id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<main class="g-content" id="workarea">
 														<div class="sl-main">
-															<div class="bg" style="background-image: url(../../../img/tmp/sl-main-bg.jpg)"></div>
+															<div class="bg"></div>
 															<div class="wrap cursor inited-not">
 																<div class="slider">
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
-																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
-																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">подробнее</a>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="../../../img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																					</div>
 																				</div>
 																			</div>
@@ -520,13 +526,19 @@
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
-																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
-																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">подробнее</a>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="../../../img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																					</div>
 																				</div>
 																			</div>
@@ -534,22 +546,27 @@
 																	</div>
 																	<div class="slide">
 																		<div class="inner">
-																			<div class="pic"><img class="img" src="../../../img/tmp/sl-main-0.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																			<div class="container">
-																				<div class="b-wrap">
-																					<div class="h1 title">сияйте этим летом с маслом flavia</div>
-																					<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
-																					<div class="btn-wrap">
-																																				<a class="btn btn-primary" href="#">подробнее</a>
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="../../../img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
 																					</div>
 																				</div>
 																			</div>
 																		</div>
 																	</div>
 																</div>
-																							<div class="js-sl-pager sl-pager"></div>
 															</div>
-																						<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
+																						<div class="sl-nav-6"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
 														</div>
 							<div class="teaser_2">
 								<div class="row">
