--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -628,6 +628,102 @@
 															</div>
 																						<div class="sl-nav-6"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
 														</div>
+														<div class="sl-brands">
+															<div class="wrap cursor inited-not">
+																<div class="slider">
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">DYCON</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">GLORYA</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">EVABOND</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">IRISK</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">HAIRWAY</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">ITALY</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">KODI</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">LONDA</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">ALFAPHARM</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">DYCON</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">GLORYA</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">EVABOND</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">IRISK</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">HAIRWAY</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">ITALY</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">KODI</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">LONDA</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="text">ALFAPHARM</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
 														<div class="b-section b-section--advice">
 															<div class="b-section__wrap">
 																<div class="b-section__body">
